prevent input from zooming in on focus on mobile sizes

--- a/styles.css
+++ b/styles.css
@@ -130,6 +130,9 @@ label {
 input {
     height: 4.5vh;
 }
+input, textarea, select {
+    font-size: 16px;
+}
 
 .btn {
     background: linear-gradient(90deg, rgba(245, 245, 219, 1) 0%, rgba(245, 245, 219, 1) 53%, rgba(255, 255, 168, 1) 100%);
